# forecast-benchmark

forecast-benchmark-v4-reviewed/: LICENSE  Makefile  README.md  pyproject.toml
forecast-benchmark-v4-reviewed/.github/workflows/: checks.yml
forecast-benchmark-v4-reviewed/docs/: METHODOLOGY.md  OPEN_QUESTIONS.md  PUBLIC_SCOPE.md  RESEARCH_open_source_landscape.md  RESEARCH_secondary_phases_and_short_history.md  RESULTS_v2_secondary_phase.md  RESULTS_v3_petbox.md  RESULTS_v4_probabilistic_scoring.md
forecast-benchmark-v4-reviewed/examples/: bubblepoint_wells.csv  demo_petbox_vs_baseline.py  demo_probabilistic_scoring.py  demo_secondary_phase.py  ratio_wells.csv  tiny_wells.csv
forecast-benchmark-v4-reviewed/src/forecast_benchmark/: arps.py  benchmark.py  cohort.py  cohort_ratio.py  cum_benchmark.py  data.py  metrics.py  param_benchmark.py  params.py  petbox_models.py  probabilistic.py  ratios.py  report.py  secondary_benchmark.py  split.py  unified.py
forecast-benchmark-v4-reviewed/tests/: test_arps.py  test_benchmark_smoke.py  test_cohort.py  test_cohort_ratio.py  test_cum_benchmark.py  test_metrics.py  test_params.py  test_petbox_models.py  test_probabilistic.py  test_public_repo_hygiene.py  test_ratios.py  test_split.py
well-forecasting/: SKILL.md
